[package]
name = "lastfm-charts"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
reqwest = { version = "0.11.24", features = ["blocking","json"] }
serde = { version = "1.0.197", features = ["derive"] }
